--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -1,10 +1,11 @@
 # Collect all source files
 file(GLOB_RECURSE LIB_SRC_FILES CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
+file(GLOB_RECURSE UTIL_SRC_FILES CONFIGURE_DEPENDS ${CMAKE_SOURCE_DIR}/src/utils/*.cpp)
 
 # Create a shared or static library
-add_library(ATCOS_lib ${LIB_SRC_FILES})
-target_include_directories(ATCOS_lib PUBLIC ${CMAKE_SOURCE_DIR}/lib)
-
+add_library(ATCOS_lib ${LIB_SRC_FILES} ${UTIL_SRC_FILES})
+target_include_directories(ATCOS_lib PUBLIC ${CMAKE_SOURCE_DIR}/src/lib ${CMAKE_SOURCE_DIR}/src/utils)
+target_link_libraries(ATCOS_lib PUBLIC spdlog tomlplusplus::tomlplusplus)
 
 # Platform-specific flags (optional)
 if (WIN32)
