--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -82,6 +82,11 @@
   //   "C_Cpp.codeAnalysis.clangTidy.path": "/usr/bin/clang-tidy",
   //   "C_Cpp.codeAnalysis.clangTidy.useBuildPath": true,
   //   "C_Cpp.default.compileCommands": "${workspaceFolder}/build/compile_commands.json",
+  "editor.formatOnSave": true,
+  "[cpp]": {
+    "editor.defaultFormatter": "xaver.clang-format"
+  },
+  "clang-format.style": "file",
   "cSpell.enabledSchemes": {
     "file": false
   }
