--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,12 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin )
 
-add_subdirectory(src)
+# Set Tracy defines
+set(TRACY_ENABLE)
+set(TRACY_VERBOSE)
+set(TRACY_ON_DEMAND)
 
+add_subdirectory(src)
 
 enable_testing()
 add_subdirectory(${CMAKE_SOURCE_DIR}/tests)
